crates/oxc_css_parser/tests/error/scss/at-rule/forward/hide-invalid.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `<number>`
  ┌─ hide-invalid.scss:1:19
  │
1 │ @forward "a" hide 1;
  │                   ^


